--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="css/style.css">
         <meta charset="utf-8">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="header">Odin Recipes</h1>
 
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
